--- a/R CODE/masters_thesis_testing_data_model.Rmd
+++ b/R CODE/masters_thesis_testing_data_model.Rmd
@@ -32,9 +32,9 @@ source(file.path(codePath,"thesis_data_preparation_part3_take2.R"))
 modelPath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","MODELS") 
 inPath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","GROOMED") # Home path
 df = read.csv(file.path(inPath,"greenwich_eltham_imputed_school_hours_take2.csv"),na.strings=c("NA"," "))
-
+ 
 nodeCount = c(9) #ceiling(colcount/2),5,10)
-response        = c('NO2') 
+response        = c('NO') 
 
 for (nodeNum in 1:length(nodeCount)){
 # get data set fields that I can use in the model. 
