--- a/R CODE/masters_thesis_finalize_models_results_1_hour_ahead.Rmd
+++ b/R CODE/masters_thesis_finalize_models_results_1_hour_ahead.Rmd
@@ -9,8 +9,8 @@ output: html_document
 # TEST SET
 # 1. ONE-HOUR AHEAD
 ```{r}
-
-infilePath = file.path("~/Dropbox","NU","THESIS","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS")
+library(dplyr)
+infilePath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS")
 df         = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_test_1_hr_ahead_final.csv"),na.strings=c("NA"," "))
 # dfNew      = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_test_2_hr_ahead.csv"),na.strings=c("NA"," "))
 # df = rbind(df, dfNew)
@@ -72,7 +72,7 @@ paste0('Overall accuractely predict NO2: ',round(overall_accuracy,3))
 # MAE & RESULTS TABLE FOR VALIDATION
 ```{r}
 # REPEAT FOR VALIDATION DATA SET
-infilePath = file.path("~/Dropbox","NU","THESIS","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS")
+infilePath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS")
 df         = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_vali_1_hr_ahead_final.csv"),na.strings=c("NA"," "))
 # dfNew      = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_vali_2_hr_ahead.csv"),na.strings=c("NA"," "))
 # df = rbind(df, dfNew)
@@ -160,7 +160,7 @@ resultsOver40AllDateObs$Time = as.POSIXct(resultsOver40AllDateObs$Time)
 resultsOver40AllDateObs[ order(resultsOver40AllDateObs$Time , decreasing = FALSE ),]  # sort data frame in appropriate order
 
 # date 1: annotate graph when correctly or incorrectly predict over 40
-data = resultsOver40AllDateObs %>% filter(resultsOver40AllDateObs$Date == unique(Over40AllObs$Date)[2])
+data = resultsOver40AllDateObs %>% filter(resultsOver40AllDateObs$Date == unique(Over40AllObs$Date)[1])
 
 good.predict = data %>% filter(actualOver40 == 'Actual Above 40' & predictOver40=='Predict Above 40')
 good.predict$text = 'Accurate Prediction'
@@ -183,11 +183,11 @@ a <- list(
 
 #unique(Over40AllObs$Date)[1]
 
-data = resultsOver40AllDateObs %>% filter(resultsOver40AllDateObs$Date == unique(Over40AllObs$Date)[2])
+data = resultsOver40AllDateObs %>% filter(resultsOver40AllDateObs$Date == unique(Over40AllObs$Date)[1])
 p <- plot_ly(data, x = ~Time, y=~NO2, name = 'Actual NO2', type='scatter', mode='lines+markers') %>%      
   add_trace(y = ~predict, name = 'Predicted NO2',mode = 'lines+markers') %>%
 #  add_trace(y = ~euLimit, name = 'EU Limit', line = list(color = 'rgb(205, 12, 24)', width = 4, dash = 'dash')) %>%
-  layout(annotations=a, title = paste0("Actual vs Predicted Hourly NO2 Greenwich Eltham: ",unique(Over40AllObs$Date)[2]), 
+  layout(annotations=a, title = paste0("Actual vs Predicted Hourly NO2 Greenwich Eltham: ",unique(Over40AllObs$Date)[1]), 
   xaxis = list(title  = "Hour of Day"),
   yaxis = list (title = "Hourly NO2 Concentration (µg/m3)"))
 p
