--- a/R CODE/masters_thesis_testing_data_model.Rmd
+++ b/R CODE/masters_thesis_testing_data_model.Rmd
@@ -33,7 +33,7 @@ modelPath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","MODELS")
 inPath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","GROOMED") # Home path
 df = read.csv(file.path(inPath,"greenwich_eltham_imputed_school_hours_take2.csv"),na.strings=c("NA"," "))
  
-nodeCount = c(13) #ceiling(colcount/2),5,10)
+#nodeCount = c(13) #ceiling(colcount/2),5,10) #search on
 response        = c('NO2') 
 
 for (nodeNum in 1:length(nodeCount)){
@@ -68,7 +68,7 @@ mae.train.latest = c()
 mae.test.latest  = c()
 mae.xval.latest  = c()
 
-for (i in 1:15){
+for (i in 1:15){ # number of variables max add = 15! likely forward var select stops at far fewer number of vars however.
 
 ##response        = c('O3')    # NO, NOX, SO2, PM10, PM2.5  Done: NO2 (0.5, 5, 10)
 results         = c()
@@ -93,7 +93,7 @@ test = -train
     }
   }
   
-  for (i in 1:1){
+  for (responseVar in 1:1){
 
     for (j in 1:dim(combn)[2]){  
       
@@ -101,7 +101,7 @@ test = -train
     #paramList = as.list(t(combn[j]))    # for this next loop we need to add chosenVar's + 1 from each combn
     #listVars  = chosenVar[length(chosenVar)]
     paramList = append(chosenVar, as.list(t(combn[j])))
-    dfNew = createDataFrame(df, response[i], paramList)
+    dfNew = createDataFrame(df, response[responseVar], paramList)
      
     # # rename the df to df.train, df.test, and df.vali respectively
     df.train = dfNew[train,]
@@ -128,9 +128,9 @@ test = -train
     mae.train = h2o.mae(df.train.dl, train = TRUE,  valid = FALSE, xval=FALSE)
     mae.test  = h2o.mae(df.train.dl, train = FALSE, valid = TRUE,  xval=FALSE)
     mae.xval  = h2o.mae(df.train.dl, train = FALSE, valid = FALSE, xval=TRUE)
-  
+
     # next: create the results table which will be a csv file with response, inputVariableName(s), mae train, test, and vali as other columns
-    responseCol = response[i]
+    responseCol = response[responseVar]
     inputVarCol = as.character(t(paramList))
   
     results.temp = data.frame(responseCol, j, inputVarCol, mae.train, mae.test, mae.xval)  #
@@ -167,6 +167,16 @@ mae.train.latest = append(mae.train.latest,min(y$mae.train))
 mae.test.latest = append(mae.test.latest,min(y$mae.test))
 mae.xval.latest = append(mae.xval.latest,min(y$mae.xval))
 
+   
+# save the 'best' model
+model_path  <- paste0("~/Dropbox/NU/THESIS_MAC/thesis/MODELS/",response[1],".dl.","hidden.layers.",nodes_layer1,"colcount.",i) 
+# saved_model <- h2o.loadModel(model_path)    # "/Users/stevenfutter/Dropbox/NU/THESIS/R CODE/~/Dropbox/NU/THESIS/MODELS/no2.dl"
+
+# Save the model
+h2o.saveModel(object=df.train.dl, path=model_path, force=TRUE)
+# print(model_path)
+# /tmp/mymodel/DeepLearning_model_R_1441838096933
+    
 
 }
 
